--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="description" content="Móveis ecológicos">
 <meta name="keywords" content="moveis ecologicos">
+<title>Móveis Ecológicos</title>
 <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
