--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="keywords" content="moveis ecologicos">
 <title>Móveis Ecológicos</title>
 <link rel="stylesheet" href="css/estilos.css">
+<script src="js/principal.js"></script>
 </head>
 <body>
 <h1>Móveis Ecológicos S. A.</h1>
