--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <li>Móveis de garrafas PET</li>
 <li>Móveis de latinhas de alumínio</li>
 <li>Móveis de papelão</li>
+<li>Móveis de papelão</li>
 </ul>
 </body>
