--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Móveis ecológicos">
 <meta name="keywords" content="moveis ecologicos">
 <title>Móveis Ecológicos</title>
-<link rel="stylesheet" href="css/estilos.css">
+<link rel="stylesheet" href="css/principal.css">
 <script src="js/principal.js"></script>
 </head>
 <body>
